--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div class= "navigation">
             <nav>
                 <div class= "logo">Little One</div>
-                <a href="index.html">HOME</a>
-                <a href="#">ABOUT ME(ATBALL)</a>
-                <a href="#">Q&A</a>
+                <ul>
+                   <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">ABOUT ME(ATBALL)</a></li>
+                    <li><a href="#">Q&A</a></li>
+                </ul>
             </nav>
         </div>
         <div class= "sidenav">
