Added Food page

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
                 <ul>
                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#">ABOUT ME(ATBALL)</a></li>
-                    <li><a href="#">Q&A</a></li>
+                    <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
         </div>
         <div class= "sidenav">
-            <i class="fas fa-home"></i><a href="housing.html">HOUSING</a><br>
-            <i class="fas fa-seedling"></i><a href="#">FOOD</a><br>
-            <i class="fas fa-magic"></i><a href="#">CARE</a><br>
-            <i class="fas fa-hand-holding-heart"></i><a href="#">TAMING</a><br>
-            <i class="fas fa-first-aid" style="font-size: 16px"></i><a href="#">DISEASES</a><br>
-            <i class="fas fa-heart"></i><a href="#">ADOPT</a>
+            <ul>
+                <li></li><i class="fas fa-home"></i><a href="housing.html">HOUSING</a></li>
+                <li><i class="fas fa-seedling"></i><a href="food.html">FOOD</a></li>
+                <li><i class="fas fa-magic"></i><a href="#">CARE</a></li>
+                <li><i class="fas fa-hand-holding-heart"></i><a href="#">TAMING</a></li>
+                <li><i class="fas fa-first-aid" style="font-size: 16px"></i><a href="#">DISEASES</a></li>
+                <li><i class="fas fa-heart"></i><a href="#">ADOPT</a></li>
+            </ul>
 
             <!-- <h6 class="nav-stories">The Adventures of Meatball</h6>
             <a href="#">STORY #1</a>
